@@ -80,6 +80,7 @@ typedef union Shnode_u Shnode_t;
 #define	SH_PREINIT	18	/* set with SH_INIT before parsing options */
 #define SH_COMPLETE	19	/* set for command completion */
 #define SH_XARG		21	/* set while in xarg (command -x) mode */
+#define SH_NOTILDEXP	22	/* set to disable tilde expansion */
 
 /*
  * Shell options (set -o). Used with sh_isoption(), sh_onoption(), sh_offoption().
