@@ -1000,7 +1000,7 @@ tst $LINENO <<"!"
 L suspend a blocked write to a FIFO
 # https://github.com/ksh93/ksh/issues/464
 
-d 20
+d 40
 p :test-1:
 w echo >testfifo
 r echo
@@ -1129,6 +1129,69 @@ d 40
 p :test-1:
 w cd vitest/aあ\t
 r ^:test-1: cd vitest/aあb/\r\n$
+!
+
+((SHOPT_HISTEXPAND && (SHOPT_VSH || SHOPT_ESH))) &&
+mkdir -p 'chrtest/aa#b' && tst $LINENO <<"!"
+L tab-completing with first histchar
+
+d 20
+p :test-1:
+w histchars='#^!'
+p :test-2:
+w set +o histexpand
+p :test-3:
+w ls chrtest/a\t
+r ^:test-3: ls chrtest/aa#b/\r\n$
+p :test-4:
+w set -o histexpand
+p :test-5:
+w ls chrtest/a\t
+r ^:test-5: ls chrtest/aa\\#b/\r\n$
+p :test-6:
+w unset histchars
+!
+
+((SHOPT_HISTEXPAND && (SHOPT_VSH || SHOPT_ESH))) &&
+mkdir -p 'chrtest2/@a@b' && tst $LINENO <<"!"
+L tab-completing with third histchar
+
+d 20
+p :test-1:
+w histchars='!^@'
+p :test-2:
+w cd chrtest2
+p :test-3:
+w set +o histexpand
+p :test-4:
+w ls \t
+r ^:test-4: ls @a@b/\r\n$
+p :test-5:
+w set -o histexpand
+p :test-6:
+w ls \t
+r ^:test-6: ls \\@a@b/\r\n$
+!
+
+((SHOPT_VSH || SHOPT_ESH)) &&
+mkdir -p 'chrtest3/~ab' && tst $LINENO <<"!"
+L tab-completing with escaped ~
+
+d 20
+p :test-1:
+w cd chrtest3; .sh.tilde.get() { print -n WRONG_TILDE_EXPANSION >&2; };
+p :test-2:
+w ls \\~\t
+r ^:test-2: ls \\~ab/\r\n$
+p :test-3:
+w ls '~\t
+r ^:test-3: ls \\~ab/\r\n$
+p :test-4:
+w ls "~\t
+r ^:test-4: ls \\~ab/\r\n$
+p :test-5:
+w ls $'~\t
+r ^:test-5: ls \\~ab/\r\n$
 !
 
 # ======
