@@ -4,6 +4,13 @@ Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
 2023-05-14:
 
+- If history expansion is active, then command and file name completion now
+  quotes the history expansion characters with a backslash as needed to
+  avoid triggering history expansion failures if one of those characters
+  occurs in a command or file name.
+
+- Fixed completion of file names starting with an escaped literal tilde.
+
 - Undocumented and non-functional goto label functionality has been removed.
   Command names can now end in ':' like on other shells, as POSIX requires.
 
